# luminesk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
luminesk/cli/: main.py
luminesk/core/: config.py  diagnostic.py  doctor.py  launcher.py  manager.py  messages.py  registry.py
luminesk/gui/: app.py  auth.py  routes.py  views.py
luminesk/gui/static/: app.css  server.js
luminesk/gui/templates/: base.html  server.html  servers.html
luminesk/tui/: app.py  formatting.py  models.py  screens.py
luminesk/tui/styles/: app.tcss
luminesk/utils/: docker.py  github_releases.py  http.py  jenkins.py  logs.py  maven.py  rich_utils.py
tests/: test_config.py  test_diagnostic.py  test_docker.py  test_doctor.py  test_downloads.py  test_gui_auth.py  test_http.py  test_launcher.py  test_logs.py  test_manager_helpers.py
