[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "luminesk"
authors = [{ name = "Taskov1ch", email = "sudo.taskov1ch@gmail.com" }]
version = "0.15"
description = "Nukkit Engine Servers Kit (LumiNESK): CLI manager for Nukkit-based Minecraft servers."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
license = { file = "LICENSE" }
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Console",
	"Intended Audience :: System Administrators",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Topic :: System :: Systems Administration",
	"Topic :: Games/Entertainment",
]
dependencies = [
	"cyclopts>=4.3.0",
	"defusedxml>=0.7.1",
	"httpx>=0.28.1",
	"platformdirs>=4.9.4",
	"pydantic>=2.12.5",
	"rich>=14.3.3",
	"rich-gradient>=0.3.11",
]
keywords = [
	"minecraft",
	"nukkit",
	"lumi",
	"powernukkitx",
	"nukkit-mot",
	"cli",
	"tool",
	"docker",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-cov>=5.0.0"]
build = ["nuitka>=2.8.9"]

[project.urls]
Homepage = "https://github.com/task-v1/LumiNESK"
Repository = "https://github.com/task-v1/LumiNESK.git"
Issues = "https://github.com/task-v1/LumiNESK/issues"

[project.scripts]
luminesk = "luminesk.main:main"
nesk = "luminesk.main:main"
core-download-urls = "scripts.core_download_urls:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["luminesk*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
